@@ -11,6 +11,8 @@ if (Current_User::allow('layout')) {
  }
 
 Layout::showKeyStyle();
-check_cookie();
+if (defined('LAYOUT_CHECK_COOKIE') && LAYOUT_CHECK_COOKIE) {
+    check_cookie();
+}
 echo Layout::display();
 ?>
